# risky-proxmox-agent

./: Cargo.toml  INSTALLING.md  README.md  RUNNING.md
.github/workflows/: ci.yml
assets/: app.js  index.html
crates/proxmox-dummy/: Cargo.toml
crates/proxmox-dummy/src/: lib.rs  main.rs
haiku-client/: Makefile  README.md
haiku-client/src/: main.cpp
hermit-client/: Cargo.toml  hermit-loader-x86_64
hermit-client/src/: api.rs  main.rs
src/: config.rs  fallback.rs  lib.rs  main.rs  remote_log.rs  server.rs
src/proxmox/: error.rs  mod.rs  types.rs
systemd/: risky-proxmox-agent.service
tasks/: 01-project-scaffolding.md  02-proxmox-api-client.md  03-server-and-ui-flow.md  04-test-crate-and-integration-tests.md  05-ci-and-artifacts.md
templates/: index.html
tests/: server_integration.rs
ukernel-loader/: Config.uk  Kraftfile  Makefile.uk  README.md
ukernel-loader/src/: main.c
