[package]
name = "risky-proxmox-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
proxmox-dummy = { path = "crates/proxmox-dummy" }

[workspace]
members = ["crates/proxmox-dummy"]
